# openmultiplayer-query

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  opcodes.rs  packet.rs
tests/: build.rs  fake_data.rs  parse.rs
