[package]
name = "openmultiplayer_query"
version = "0.1.2"
edition = "2021"
description = "Implements the needed builders and parsers for SA:MP's/Open Multiplayer's Query Mechanism, allowing a developer to retrieve data from a running server."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
encoding_rs = "0.8.33"
thiserror = "1.0.50"
